# Hackathon-Todo-App-

./: .env  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: deploy-oke.yml
.specify/memory/: constitution.md
backend/: .env  conversation_models.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  todo.db
backend/agents/: gemini_agent.py
backend/mcp/: tools.py
backend/migrations/: add_phase5_fields.py
backend/new_venv/: pyvenv.cfg
backend/routers/: chat.py  tasks.py
backend/src/api/v1/: events.py  recurring_tasks.py  reminders.py
backend/src/dapr/: dapr_client.py  task_event_producer.py
backend/src/handlers/: event_handlers.py
backend/src/models/: recurring_task_pattern.py  reminder.py  task_event.py
backend/src/services/: event_subscription.py  notification_service.py  recurring_task_service.py  reminder_service.py  task_event_service.py  task_service.py  validation.py
backend/src/tasks/: recurrence_engine.py  reminder_engine.py  scheduler.py
charts/todo-app/: values.yaml
dapr/components/: jobs.yaml  pubsub.yaml  secretstore.yaml  statestore.yaml
docker/: .dockerignore.backend  .dockerignore.frontend  Dockerfile.backend  Dockerfile.frontend
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docs/: oke-deployment.md
frontend/: docker-compose.yml  next.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
k8s/: deploy.sh  deployment-commands.md  minikube-setup.sh
scripts/: deploy-oke.sh  kubectl-ai-commands.sh
(+82 files in other folders)
